--- a/scrapper/package.json
+++ b/scrapper/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "heapdump": "^0.3.9",
     "mongoose": "^5.0.12",
     "node-fetch": "^2.1.2"
   }
