--- a/views/package.json
+++ b/views/package.json
@@ -7,8 +7,10 @@
     "@blueprintjs/table": "^2.0.0",
     "ajv": "^6.3.0",
     "mathjs": "^4.0.1",
+    "plotly.js": "^1.35.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-plotly.js": "^2.1.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
