--- a/views/package.json
+++ b/views/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@blueprintjs/core": "^2.0.0",
     "@blueprintjs/table": "^2.0.0",
+    "@tensorflow/tfjs": "^0.9.1",
     "ajv": "^6.3.0",
     "mathjs": "^4.0.1",
     "plotly.js": "^1.35.2",
