--- a/scrapper/package.json
+++ b/scrapper/package.json
@@ -16,6 +16,7 @@
     "cheerio": "^1.0.0-rc.2",
     "heapdump": "^0.3.9",
     "mongoose": "^5.0.12",
-    "node-fetch": "^2.1.2"
+    "node-fetch": "^2.1.2",
+    "puppeteer": "^1.4.0"
   }
 }
