--- a/scrapper/package.json
+++ b/scrapper/package.json
@@ -16,7 +16,8 @@
     "cheerio": "^1.0.0-rc.2",
     "heapdump": "^0.3.9",
     "mongoose": "^5.0.12",
-    "node-fetch": "^2.1.2",
-    "puppeteer": "^1.4.0"
+    "node-fetch": "^2.2.0",
+    "puppeteer": "^1.4.0",
+    "uuid": "^3.3.2"
   }
 }
