--- a/app/package.json
+++ b/app/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^2.0.0",
+    "@blueprintjs/select": "^3.10.0",
     "@blueprintjs/table": "^2.0.0",
     "@tensorflow/tfjs": "^0.9.1",
     "ajv": "^6.3.0",
     "mathjs": "^4.0.1",
     "plotly.js": "^1.35.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-plotly.js": "^2.1.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
