--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /node_modules
 /app/node_modules
 /scrapper/node_modules
+/localScrapper/node_modules
 
 # serverless
 /serverless-service/.serverless
@@ -16,6 +17,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+
+usedCars.code-workspace
 
 npm-debug.log*
 yarn-debug.log*
