--- a/app/package.json
+++ b/app/package.json
@@ -9,8 +9,11 @@
     "@tensorflow/tfjs": "^0.9.1",
     "acorn": "^7.1.1",
     "ajv": "^6.3.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-security": "^1.4.0",
     "mathjs": "^4.0.1",
     "plotly.js": "^1.52.3",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-plotly.js": "^2.1.0",
@@ -18,7 +21,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "^3.4.0",
     "react-transition-group": "^2.2.1",
-    "redux": "^3.7.2",
+    "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.3.0"
   },
@@ -30,7 +33,8 @@
   },
   "devDependencies": {
     "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0"
+    "enzyme-adapter-react-16": "^1.6.0",
+    "eslint-plugin-react": "^7.20.6"
   },
   "browserslist": {
     "production": [
