added INLINE_RUNTIME_CHUNK=false to build to fix script-src self security header

--- a/app/package.json
+++ b/app/package.json
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts --max_old_space_size=4096 build",
+    "build": "INLINE_RUNTIME_CHUNK=false react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
