--- a/app/package.json
+++ b/app/package.json
@@ -6,13 +6,13 @@
     "@blueprintjs/core": "^2.0.0",
     "@blueprintjs/select": "^2.0.0",
     "@blueprintjs/table": "^2.0.0",
-    "@tensorflow/tfjs": "^0.9.1",
     "acorn": "^7.1.1",
     "ajv": "^6.3.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-security": "^1.4.0",
     "mathjs": "^4.0.1",
+    "ml-regression-simple-linear": "^2.0.2",
     "plotly.js": "^1.52.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
