--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,5 +1,9 @@
 version: 0.2
 
+env:
+  parameter-store:
+    buildNumber: "/build-number/usedCars-master"
+
 phases:
   install:
     runtime-versions:
