--- a/app/package.json
+++ b/app/package.json
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "INLINE_RUNTIME_CHUNK=false react-scripts --max_old_space_size=4096 build",
+    "build": "INLINE_RUNTIME_CHUNK=false REACT_APP_BUILD_NUMBER=$CODEBUILD_BUILD_NUMBER react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
