removed installing latest npm (which requires node 14+, while CodeBuild requires node 12 or 10

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       nodejs: 12
     commands:
       - cd app
-      - npm i npm@latest -g
+      # - npm i npm@latest -g
       # - npm i serverless@latest -g
       # - pip install --upgrade pip
       # - pip install --upgrade awscli
