--- a/scrapper/serverless.yml
+++ b/scrapper/serverless.yml
@@ -13,39 +13,50 @@ provider:
   runtime: nodejs16.x
   stage: dev
   region: eu-west-1
-  iamRoleStatements:
-    - Effect: Allow
-      Action:
-        - dynamodb:Query
-        - dynamodb:Scan
-        - dynamodb:GetItem
-        - dynamodb:PutItem
-        - dynamodb:UpdateItem
-      Resource:
-        - arn:aws:dynamodb:eu-west-1:072129581133:table/${self:custom.vehicleListTableName}
-    - Effect: Allow
-      Action:
-        - dynamodb:Query
-        - dynamodb:Scan
-        - dynamodb:GetItem
-        - dynamodb:PutItem
-        - dynamodb:BatchWriteItem
-        - dynamodb:UpdateItem
-        - dynamodb:DeleteItem
-      Resource:
-        - { "Fn::GetAtt": ["VehicleRecordsTable", "Arn"] }
-        - { "Fn::GetAtt": ["ScrapLogTable", "Arn"] }
-    - Effect: Allow
-      Action:
-        - lambda:GetLayerVersion
-      Resource:
-        - arn:aws:lambda:eu-west-1:072129581133:layer:puppeteer:2
+  iam:
+    role:
+      statements:
+        - Effect: Allow
+          Action:
+            - dynamodb:Query
+            - dynamodb:Scan
+            - dynamodb:GetItem
+            - dynamodb:PutItem
+            - dynamodb:UpdateItem
+          Resource:
+            - arn:aws:dynamodb:eu-west-1:072129581133:table/${self:custom.vehicleListTableName}
+        - Effect: Allow
+          Action:
+            - dynamodb:Query
+            - dynamodb:Scan
+            - dynamodb:GetItem
+            - dynamodb:PutItem
+            - dynamodb:BatchWriteItem
+            - dynamodb:UpdateItem
+            - dynamodb:DeleteItem
+          Resource:
+            - { 'Fn::GetAtt': ['VehicleRecordsTable', 'Arn'] }
+            - { 'Fn::GetAtt': ['ScrapLogTable', 'Arn'] }
+            - 'Fn::Join':
+                [
+                  '/',
+                  [
+                    'Fn::GetAtt': [ScrapLogTable, Arn],
+                    'index',
+                    'scrapDate-index',
+                  ],
+                ]
+        # - Effect: Allow
+        #   Action:
+        #     - lambda:GetLayerVersion
+        #   Resource:
+        # - arn:aws:lambda:eu-west-1:072129581133:layer:puppeteer:2
         # - arn:aws:lambda:eu-west-1:764866452798:layer:chrome-aws-lambda:5
-    - Effect: Allow
-      Action:
-        - ses:SendEmail
-      Resource:
-        - arn:aws:ses:eu-west-1:072129581133:identity/thibaut.dehollain@gmail.com
+        - Effect: Allow
+          Action:
+            - ses:SendEmail
+          Resource:
+            - arn:aws:ses:eu-west-1:072129581133:identity/thibaut.dehollain@gmail.com
   environment:
     VEHICLE_LIST_TABLE: ${self:custom.vehicleListTableName}
     VEHICLE_RECORDS_TABLE: ${self:custom.vehicleRecordsTableName}
@@ -67,7 +78,7 @@ functions:
 resources:
   Resources:
     VehicleRecordsTable:
-      Type: "AWS::DynamoDB::Table"
+      Type: 'AWS::DynamoDB::Table'
       Properties:
         AttributeDefinitions:
           - AttributeName: title
@@ -95,7 +106,7 @@ resources:
           WriteCapacityUnits: 1
         TableName: ${self:custom.vehicleRecordsTableName}
     ScrapLogTable:
-      Type: "AWS::DynamoDB::Table"
+      Type: 'AWS::DynamoDB::Table'
       Properties:
         AttributeDefinitions:
           - AttributeName: title
