--- a/serverless-service/serverless.yml
+++ b/serverless-service/serverless.yml
@@ -9,32 +9,39 @@ custom:
 provider:
   name: aws
   profile: usedCars-serverless-admin
-  runtime: nodejs10.x
+  runtime: nodejs14.x
   stage: dev
   region: eu-west-1
-  iamRoleStatements:
-    - Effect: Allow
-      Action:
-        - dynamodb:Query
-        - dynamodb:Scan
-        - dynamodb:GetItem
-        - dynamodb:PutItem
-        - dynamodb:UpdateItem
-        - dynamodb:DeleteItem
-      Resource:
-        - { 'Fn::GetAtt': ['VehicleListTable', 'Arn'] }
-    - Effect: Allow
-      Action:
-        - dynamodb:Query
-        - dynamodb:Scan
-        - dynamodb:GetItem
-      Resource:
-        - arn:aws:dynamodb:eu-west-1:072129581133:table/${self:custom.vehicleRecordsTableName}
+  # iam:
+  #   role:
+  #     statements:
+  #       - Effect: Allow
+  #         Action:
+  #           - dynamodb:Query
+  #           - dynamodb:Scan
+  #           - dynamodb:GetItem
+  #           - dynamodb:PutItem
+  #           - dynamodb:UpdateItem
+  #           - dynamodb:DeleteItem
+  #         Resource:
+  # - { 'Fn::GetAtt': ['VehicleListTable', 'Arn'] }
+  # - arn:aws:dynamodb:eu-west-1:072129581133:table/${self:custom.vehicleListTableName}
+  # - arn:aws:dynamodb:eu-west-1:072129581133:table/${self:custom.vehicleRecordsTableName}
+  # - Effect: Allow
+  #   Action:
+  #     - dynamodb:Query
+  #     - dynamodb:Scan
+  #     - dynamodb:GetItem
+  #   Resource:
+  #     - arn:aws:dynamodb:eu-west-1:072129581133:table/${self:custom.vehicleRecordsTableName}
   environment:
     VEHICLE_LIST_TABLE: ${self:custom.vehicleListTableName}
     VEHICLE_RECORDS_TABLE: ${self:custom.vehicleRecordsTableName}
 
 functions:
+  getVehicleTiming:
+    handler: getVehicleTiming.handler
+    timeout: 30
   addVehicle:
     handler: addVehicle.handler
     timeout: 30
